--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@
             </div>
         </section>
 
+        <!-- DETAIL VIEW (New SPA Section) -->
+        <section id="detail-view" class="view hidden">
+            <div class="app-nav detail-nav">
+                <button id="back-to-types-btn" class="back-btn"><i class="fa-solid fa-arrow-left"></i> <span data-t="navTypes">Types</span></button>
+            </div>
+            <div id="detail-content">
+                <!-- Dynamic Content injected here -->
+            </div>
+        </section>
+
     </main>
 
     <script type="module" src="script.js"></script>
